# arc

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  run_editor.py
editor/: CMakeLists.txt  README.md  forge.config.ts  package-lock.json  package.json
editor/inc/arc/editor/: arc_host.h  asset_drag_drop.h  editor_console.h  editor_defaults.h  editor_gizmo.h  editor_interaction.h  editor_state.h  editor_ui_state.h  editor_viewport.h  host_protocol.h  material_asset.h  material_library.h  material_preview.h  scene_document.h  sdl_events.h
editor/inc/arc/editor/panels/: console_panel.h  content_browser_panel.h  inspector_panel.h  material_editor_panel.h  profiler_panel.h  render_graph_panel.h  scene_hierarchy_panel.h  shader_graph_panel.h  status_bar.h  toolbar_panel.h
editor/inc/arc/editor/ui/: theme.h  top_bar_reference_style.h  widgets.h
editor/native/: CMakeLists.txt  README.md
editor/native/inc/arc/editor/: arc_host.h  editor_defaults.h  editor_history.h  editor_interaction.h  editor_state.h  host_protocol.h  material_asset.h  material_library.h  prefab_document.h  scene_document.h  world_environment_host.h
editor/native/src/: arc_host.cpp  arc_host_process_main.cpp  editor_gizmo.cpp  editor_interaction.cpp  editor_state.cpp  editor_viewport.cpp  host_protocol.cpp  material_asset.cpp  material_library.cpp  material_preview.cpp  prefab_document.cpp  scene_document.cpp
editor/native/tests/: CMakeLists.txt  editor_tests.cpp
editor/src/: arc_host.cpp  arc_host_process_main.cpp  asset_drag_drop.cpp  editor_application.cpp  editor_console.cpp  editor_defaults.cpp  editor_history.cpp  editor_interaction.cpp  editor_state.cpp  editor_viewport.cpp  host_protocol.cpp  main.cpp  material_asset.cpp  material_library.cpp  material_preview.cpp  scene_document.cpp  sdl_events.cpp  world_environment_host.cpp
editor/src/main/: main.ts
editor/src/panels/: console_panel.cpp  content_browser_panel.cpp  inspector_panel.cpp  material_editor_panel.cpp  profiler_panel.cpp  render_graph_panel.cpp  scene_hierarchy_panel.cpp  shader_graph_panel.cpp  status_bar.cpp  toolbar_panel.cpp
editor/src/preload/: preload.ts
editor/src/renderer/: index.html
editor/src/renderer/src/: main.tsx  styles.css  theme.css  tokens.css
editor/src/renderer/src/app/: Workbench.tsx  WorkbenchHierarchy.test.ts  commandRegistry.ts  panelRegistry.ts  workbench.css  workbenchStore.ts  workbenchTypes.ts
editor/src/renderer/src/console/: ConsolePanel.test.tsx  ConsolePanel.tsx
editor/src/renderer/src/environment/: WorldEnvironmentInspector.tsx
editor/src/renderer/src/inspector/: AssetPicker.tsx  ColorPicker.test.ts  ColorPicker.tsx  InspectorControls.tsx  InspectorPanel.test.tsx  InspectorPanel.tsx  SchemaComponents.tsx  componentSchemas.ts  generatedEcsMetadata.ts  inspector.css  inspectorTypes.test.ts  (+2 more)
editor/src/ui/: theme.cpp  widgets.cpp
editor/tests/: CMakeLists.txt  editor_tests.cpp
engine/: CMakeLists.txt  README.md
engine/diagnostics/: CMakeLists.txt
engine/diagnostics/inc/arc/: diagnostics.h
engine/diagnostics/src/common/: log.cpp
engine/diagnostics/src/windows/: windows_debug_sink.cpp
engine/diagnostics/tests/: CMakeLists.txt  diagnostics_tests.cpp
engine/ecs/: CMakeLists.txt  README.md
engine/ecs/src/common/: identity.cpp
engine/ecs/tests/: CMakeLists.txt  ecs_tests.cpp
engine/framework/: CMakeLists.txt
engine/framework/inc/arc/: application.h  framework.h  module.h  runtime.h
engine/framework/src/common/: headless.cpp  module.cpp  runtime.cpp  runtime_world.cpp  service.cpp
engine/framework/tests/: CMakeLists.txt  framework_tests.cpp
engine/geometric/: CMakeLists.txt
engine/geometric/inc/geometric/: box.h  circle.h  geometric.h  line.h  point.h
engine/geometric/tests/: CMakeLists.txt  geometric_tests.cpp
engine/input/: CMakeLists.txt
engine/input/inc/arc/: input.h
engine/input/src/common/: input.cpp
engine/input/tests/: input_tests.cpp
engine/io/: CMakeLists.txt
engine/io/inc/arc/: io.h
engine/io/src/common/: io.cpp
engine/io/tests/: CMakeLists.txt  io_tests.cpp
engine/jobs/: CMakeLists.txt
engine/jobs/src/common/: jobs.cpp
engine/jobs/tests/: CMakeLists.txt  jobs_tests.cpp
engine/math/: CMakeLists.txt
engine/math/inc/math/: math.h  matrix.h  quaternion.h  vector.h
engine/math/tests/: CMakeLists.txt  math_header_tests.cpp
engine/memory/: CMakeLists.txt
engine/memory/src/common/: memory.cpp
engine/memory/tests/: CMakeLists.txt  memory_tests.cpp
engine/platform/windows/: CMakeLists.txt
engine/platform/windows/src/: windows_entry.cpp
engine/platform/windows/tests/: windows_smoke_app.cpp
engine/render/: CMakeLists.txt
engine/render-vulkan/: CMakeLists.txt
engine/render-vulkan/src/: builtin_shaders.h  vulkan_backend.cpp  vulkan_pick_utils.h  vulkan_sky_constants.cpp  vulkan_sky_constants.h
engine/render-vulkan/tests/: CMakeLists.txt  vulkan_backend_tests.cpp
engine/render/backends/vulkan/: CMakeLists.txt
engine/render/inc/arc/: render.h
engine/render/src/common/: events.cpp  handles.cpp  lighting.cpp  material.cpp  mesh.cpp  primitives.cpp  render_graph.cpp  render_world.cpp  renderer.cpp  resources.cpp  shader.cpp  texture.cpp  virtual_mesh_builder.cpp
engine/render/tests/: CMakeLists.txt  render_tests.cpp
engine/scene/: CMakeLists.txt
engine/scene/inc/arc/: scene.h
engine/scene/schema/: components.arccomponents.json
engine/scene/src/common/: entity_guid.cpp  environment.cpp  hierarchy.cpp  render_scene.cpp  terrain.cpp  transforms.cpp
engine/scene/tests/: CMakeLists.txt  scene_tests.cpp
engine/simd/: CMakeLists.txt
engine/simd/inc/arc/: simd.h
engine/simd/tests/: CMakeLists.txt  arithmetic_tests.cpp  bitwise_tests.cpp  comparison_tests.cpp  game_ops_tests.cpp  lanes_tests.cpp  load_store_tests.cpp  minmax_tests.cpp
samples/: CMakeLists.txt  README.md
samples/boot_app/: main.cpp
samples/headless/: main.cpp
tests/: CMakeLists.txt  README.md  arithmetic_tests.cpp  bitwise_tests.cpp  lanes_tests.cpp  load_store_tests.cpp  minmax_tests.cpp  test_simd.cpp
(+254 files in other folders)
